<resources>
    <string name="app_name">Component</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="_1_20">1/20</string>
    <string name="add_task">Add Task</string>
</resources>