<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="4dp"
        android:text="@string/add_task"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_addTask"
        android:layout_margin="16dp"
        android:hint="@string/title"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:id="@+id/warning_text_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_20"
        android:textColor="#6B29DF"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/editTextTitle"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"/>

    <EditText
        android:id="@+id/editTextDetail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/warning_text_task_title"
        app:layout_constraintBottom_toTopOf="@id/btnSaveNote"
        android:gravity="top"
        android:hint="@string/description"
        android:layout_margin="16dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/btnSaveNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>